force-app/main/default/objects/Account_Address__c/Account_Address__c.object-meta.xml
<CustomObject>
    <description>Junction object to connect Location Addresses with Accounts. Also links to Quotes.</description>
    <label>Account Address</label>
    <nameField>
        <label>Address Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>