force-app/main/default/objects/Account_Address__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Captures the relationship to the Account. Primary relationship.</description>
    <inlineHelpText>Indicates the relationship to the Account. Primary relationship.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Addresses</relationshipLabel>
    <relationshipName>Account_Addresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>