force-app/main/default/objects/Account_Address__c/fields/Address1_1__c.field-meta.xml
<CustomField>
    <fullName>Address1_1__c</fullName>
    <formula>Location_Address__r.Address_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address 1</label>
    <type>Text</type>
</CustomField>