force-app/main/default/objects/Account_Address__c/fields/Address1_2__c.field-meta.xml
<CustomField>
    <fullName>Address1_2__c</fullName>
    <formula>Location_Address__r.Address_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address 2</label>
    <type>Text</type>
</CustomField>