force-app/main/default/objects/Account_Address__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Concatenates the address fields.</description>
    <formula>Address1_1__c + BR() + Address1_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Concatenates the address fields.</inlineHelpText>
    <label>Address</label>
    <type>Text</type>
</CustomField>