force-app/main/default/objects/Account_Address__c/fields/Cancelation_Policy__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_Policy__c</fullName>
    <description>Captures the location&apos;s cancellation policy. Pulled from Location Address.</description>
    <formula>Location_Address__r.Cancelation_Policy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the location&apos;s cancellation policy. Pulled from Location Address.</inlineHelpText>
    <label>Cancelation Policy</label>
    <type>Text</type>
</CustomField>