force-app/main/default/objects/Account_Address__c/fields/City1__c.field-meta.xml
<CustomField>
    <fullName>City1__c</fullName>
    <formula>Location_Address__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>