force-app/main/default/objects/Account_Address__c/fields/Classroom_Size__c.field-meta.xml
<CustomField>
    <fullName>Classroom_Size__c</fullName>
    <description>Captures the classroom size of the location. Pulled from Location Address.</description>
    <formula>Location_Address__r.Classroom_Size__c</formula>
    <inlineHelpText>Indicates the classroom size of the location. Pulled from Location Address.</inlineHelpText>
    <label>Classroom Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>