force-app/main/default/objects/Account_Address__c/fields/Country1__c.field-meta.xml
<CustomField>
    <fullName>Country1__c</fullName>
    <formula>TEXT(Location_Address__r.Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>