force-app/main/default/objects/Account_Address__c/fields/Full_AccountAddressId__c.field-meta.xml
<CustomField>
    <fullName>Full_AccountAddressId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Full_AccountAddressId</label>
    <type>Text</type>
</CustomField>