force-app/main/default/objects/Account_Address__c/fields/Full_AccountId__c.field-meta.xml
<CustomField>
    <fullName>Full_AccountId__c</fullName>
    <formula>CASESAFEID( Account__r.Id )</formula>
    <label>Full_AccountId</label>
    <type>Text</type>
</CustomField>