force-app/main/default/objects/Account_Address__c/fields/IHTPOSHT__c.field-meta.xml
<CustomField>
    <fullName>IHTPOSHT__c</fullName>
    <description>Flag showing In-House, 3rd Party, On-site or Hotel Nature(s) of this location</description>
    <formula>TEXT(Location_Address__r.IHTPOSHT__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Flag showing In-House, 3rd Party, On-site or Hotel Nature(s) of this location</inlineHelpText>
    <label>IHTPOSHT</label>
    <type>Text</type>
</CustomField>