force-app/main/default/objects/Account_Address__c/fields/Location_Address1__c.field-meta.xml
<CustomField>
    <fullName>Location_Address1__c</fullName>
    <description>Concatenates the entire address fields.</description>
    <formula>upper(substitute(Address__c + BR() + City1__c + &quot;, &quot; + Province1__c + BR() + Postal_Code1__c + BR() + Country1__c, BR()+BR(), BR()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Concatenates the entire address fields.</inlineHelpText>
    <label>Location Address</label>
    <type>Text</type>
</CustomField>