force-app/main/default/objects/Account_Address__c/fields/Location_Status__c.field-meta.xml
<CustomField>
    <fullName>Location_Status__c</fullName>
    <formula>TEXT(Location_Address__r.Location_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Status</label>
    <type>Text</type>
</CustomField>