force-app/main/default/objects/Account_Address__c/fields/Parking_Notes__c.field-meta.xml
<CustomField>
    <fullName>Parking_Notes__c</fullName>
    <description>Captures details about parking needs at a location. Pulled from Location Address.</description>
    <formula>Location_Address__r.Parking_Notes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates details about parking needs at this location. Pulled from Location Address.</inlineHelpText>
    <label>Parking Notes</label>
    <type>Text</type>
</CustomField>