force-app/main/default/objects/Account_Address__c/fields/Postal_Code1__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code1__c</fullName>
    <formula>Location_Address__r.Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postal Code</label>
    <type>Text</type>
</CustomField>