force-app/main/default/objects/Account_Address__c/fields/Province1__c.field-meta.xml
<CustomField>
    <fullName>Province1__c</fullName>
    <formula>TEXT ( Location_Address__r.Province__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Province</label>
    <type>Text</type>
</CustomField>