force-app/main/default/objects/Account_Address__c/fields/Province_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Province_State_Code__c</fullName>
    <formula>Location_Address__r.Province_State_Code__c</formula>
    <label>Province/State Code</label>
    <type>Text</type>
</CustomField>