force-app/main/default/objects/Account_Address__c/fields/Room_Rental_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Room_Rental_Pricing__c</fullName>
    <description>Captures the room rental price for applicable locations. Pulled from Location Address.</description>
    <formula>Location_Address__r.Room_Rental_Pricing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the room rental price (if applicable). Pulled from Location Address.</inlineHelpText>
    <label>Room Rental Pricing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>