force-app/main/default/objects/Account_Address__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Captures the type of Account Address.</description>
    <inlineHelpText>Indicates the type of Account Address.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown Address</fullName>
                <default>true</default>
                <label>Unknown Address</label>
            </value>
            <value>
                <fullName>Billing Address</fullName>
            </value>
            <value>
                <fullName>Shipping Address</fullName>
            </value>
            <value>
                <fullName>Training Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>