force-app/main/default/objects/Account_Address__c/fields/Web_Name__c.field-meta.xml
<CustomField>
    <fullName>Web_Name__c</fullName>
    <formula>Location_Address__r.Web_Name__c</formula>
    <label>Web Name</label>
    <type>Text</type>
</CustomField>