force-app/main/default/objects/Account_Address__c/validationRules/No_Changes_Can_Be_Made_While_Primary.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Changes_Can_Be_Made_While_Primary</fullName>
    <active>true</active>
    <errorConditionFormula>and (Primary__c,

or(
ISCHANGED( Location_Address__c ),
ISCHANGED( Account__c  ),
ISCHANGED( Type__c  ) 

))</errorConditionFormula>
    <errorMessage>No Changes Can Be Made Until Primary Is Disabled</errorMessage>
</ValidationRule>