force-app/main/default/objects/Account_Address__c/listViews/All_OSG_Addresses.listView-meta.xml
<ListView>
    <fullName>All_OSG_Addresses</fullName>
    <columns>NAME</columns>
    <columns>Location_Code__c</columns>
    <columns>Classroom_Size__c</columns>
    <columns>IHTPOSHT__c</columns>
    <columns>Room_Rental_Pricing__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Training Address</value>
    </filters>
    <label>All OSG Addresses</label>
</ListView>